09-Ingress-Basic/kube-manifests/03-Ingress-Basic.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxapp1-ingress-service
spec:  
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: app1-nginx-clusterip-service
            port:
              number: 80
        pathType: Prefix
          # old configuration which works with apiVersion: networking.k8s.io/v1beta1
          # serviceName: app1-nginx-clusterip-service
          # servicePort: 80
